<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the slides that display the learning material for each topic -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ExploreTopicSlideFragment">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_icon_turtle_color"
        android:contentDescription="@string/the_topic_image" />

    <TextView
        android:id="@+id/slide_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/slide_arrows_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/slide_arrow_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            app:srcCompat="@drawable/ic_arrow_back"
            android:contentDescription="@string/a_back_arrow" />

        <ImageView
            android:id="@+id/slide_arrow_forward"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_arrow_forward"
            android:contentDescription="@string/a_forward_arrow" />

    </RelativeLayout>

</LinearLayout>